-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Performance, WiredTiger
-
Fully Compatible
-
ALL
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
20% regression in single thread performance compared to baseline. This is using a recent compare to 3.1.7.
To recreate the empty capped in the shell:
var setup = function( collection ) { collection.drop(); collection.runCommand( "create", { capped : true, size : 32 * 1024 } ); } use test0 setup(db.Insert_EmptyCapped0) benchRun({"ops":[{"op":"insert","doc":{},"ns":"test0.Insert_EmptyCapped0","safe":false,"w":0,"j":false,"writeCmd":true}],"seconds":30,"host":"127.0.0.1:27017","parallel":1})
Original failure message:
[2015/10/08 12:10:34.838] Override in references for test Insert.EmptyCapped.SeqIntID
[2015/10/08 12:10:34.838] regression found on 1: drop from 12386.47 ops/sec (commit 7d7f4) to 9807.34 ops/sec for comparison Baseline Comparison 3.0.6-Baseline. Diff is 2579.13 ops/sec (20.82%), noise level is 91.96 ops/sec and multiple is 2.00
[2015/10/08 12:10:34.838] regression found on 2: drop from 25065.53 ops/sec (commit 7d7f4) to 20346.30 ops/sec for comparison Baseline Comparison 3.0.6-Baseline. Diff is 4719.23 ops/sec (18.83%), noise level is 234.05 ops/sec and multiple is 2.00[2015/10/08 12:10:34.839] Override in references for test Insert.EmptyCapped
[2015/10/08 12:10:34.839] regression found on 1: drop from 12445.05 ops/sec (commit 7d7f4) to 9495.62 ops/sec for comparison Baseline Comparison 3.0.6-Baseline. Diff is 2949.43 ops/sec (23.70%), noise level is 154.85 ops/sec and multiple is 2.00
[2015/10/08 12:10:34.839] regression found on 2: drop from 25188.91 ops/sec (commit 7d7f4) to 20805.12 ops/sec for comparison Baseline Comparison 3.0.6-Baseline. Diff is 4383.79 ops/sec (17.40%), noise level is 400.21 ops/sec and multiple is 2.00
- related to
-
SERVER-134612 Oplog truncation re-walks every unreclaimed deleted page because each pass starts from a null lower bound
-
- Investigating
-