SERVER-21008: Fixed cappedDelete to keep track of beginning of collection so it skips tombstones