src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -737,6 +737,7 @@ WiredTigerRecordStore::WiredTigerRecordStore(OperationContext* ctx,
       _cappedMaxSize(cappedMaxSize),
       _cappedMaxSizeSlack(std::min(cappedMaxSize / 10, int64_t(16 * 1024 * 1024))),
       _cappedMaxDocs(cappedMaxDocs),
+      _cappedFirstRecord(),
       _cappedSleep(0),
       _cappedSleepMS(0),
       _cappedCallback(cappedCallback),
@@ -1011,25 +1012,46 @@ int64_t WiredTigerRecordStore::cappedDeleteAsNeeded_inlock(OperationContext* txn
         WriteUnitOfWork wuow(txn);
 
         WiredTigerCursor curwrap(_uri, _tableId, true, txn);
-        WT_CURSOR* c = curwrap.get();
-        RecordId newestOld;
+        WT_CURSOR* truncateEnd = curwrap.get();
+        RecordId newestIdToDelete;
+        int64_t firstKey = 0;
         int ret = 0;
-        while ((sizeSaved < sizeOverCap || docsRemoved < docsOverCap) && (docsRemoved < 20000) &&
-               (ret = WT_OP_CHECK(c->next(c))) == 0) {
-            int64_t key;
-            ret = c->get_key(c, &key);
+        bool positioned = false;
+
+        // If we know where the first record is, go to it
+        if (_cappedFirstRecord != RecordId()) {
+            truncateEnd->set_key(truncateEnd, _makeKey(_cappedFirstRecord));
+            if ((ret = WT_OP_CHECK(truncateEnd->search(truncateEnd))) != WT_NOTFOUND) {
+                invariantWTOK(ret);
+                invariantWTOK(truncateEnd->get_key(truncateEnd, &firstKey));
+                positioned = true;
+            }
+        }
+
+        // Advance the cursor truncateEnd until we find a suitable end point for our truncate
+        while ((sizeSaved < sizeOverCap || docsRemoved < docsOverCap) && (docsRemoved < 20000)) {
+            if (positioned)
+                positioned = false;
+            else if ((ret = WT_OP_CHECK(truncateEnd->next(truncateEnd))) == WT_NOTFOUND)
+                break;
             invariantWTOK(ret);
 
-            // don't go past the record we just inserted
-            newestOld = _fromKey(key);
-            if (newestOld >= justInserted)  // TODO: use oldest uncommitted instead
-                break;
+            int64_t key;
+            invariantWTOK(truncateEnd->get_key(truncateEnd, &key));
 
             if (_shuttingDown)
                 break;
 
+            // don't go past the record we just inserted
+            RecordId nextId = _fromKey(key);
+            // TODO: use oldest uncommitted instead
+            if (newestIdToDelete >= justInserted)
+                break;
+            else
+                newestIdToDelete = nextId;
+
             WT_ITEM old_value;
-            invariantWTOK(c->get_value(c, &old_value));
+            invariantWTOK(truncateEnd->get_value(truncateEnd, &old_value));
 
             ++docsRemoved;
             sizeSaved += old_value.size;
@@ -1037,28 +1059,38 @@ int64_t WiredTigerRecordStore::cappedDeleteAsNeeded_inlock(OperationContext* txn
             if (_cappedCallback) {
                 uassertStatusOK(_cappedCallback->aboutToDeleteCapped(
                     txn,
-                    newestOld,
+                    newestIdToDelete,
                     RecordData(static_cast<const char*>(old_value.data), old_value.size)));
             }
         }
 
-        if (ret != WT_NOTFOUND) {
-            invariantWTOK(ret);
-        }
-
         if (docsRemoved > 0) {
             // if we scanned to the end of the collection or past our insert, go back one
-            if (ret == WT_NOTFOUND || newestOld >= justInserted) {
-                ret = WT_OP_CHECK(c->prev(c));
+            if (ret == WT_NOTFOUND || newestIdToDelete >= justInserted) {
+                ret = WT_OP_CHECK(truncateEnd->prev(truncateEnd));
+                invariantWTOK(ret);
+            } else
+                invariantWTOK(ret);
+
+            RecordId firstRemainingId;
+            ret = truncateEnd->next(truncateEnd);
+            if (ret != WT_NOTFOUND) {
+                invariantWTOK(ret);
+                int64_t key;
+                invariantWTOK(truncateEnd->get_key(truncateEnd, &key));
+                firstRemainingId = _fromKey(key);
             }
-            invariantWTOK(ret);
+            invariantWTOK(truncateEnd->prev(truncateEnd));  // put the cursor back where it was
 
             WiredTigerCursor startWrap(_uri, _tableId, true, txn);
-            WT_CURSOR* start = startWrap.get();
-            ret = WT_OP_CHECK(start->next(start));
-            invariantWTOK(ret);
 
-            ret = session->truncate(session, NULL, start, c, NULL);
+            WT_CURSOR* truncateStart = NULL;
+            if (firstKey != 0) {
+                truncateStart = startWrap.get();
+                truncateStart->set_key(truncateStart, firstKey);
+            }
+
+            ret = session->truncate(session, NULL, truncateStart, truncateEnd, NULL);
             if (ret == ENOENT || ret == WT_NOTFOUND) {
                 // TODO we should remove this case once SERVER-17141 is resolved
                 log() << "Soft failure truncating capped collection. Will try again later.";
@@ -1068,6 +1100,9 @@ int64_t WiredTigerRecordStore::cappedDeleteAsNeeded_inlock(OperationContext* txn
                 _changeNumRecords(txn, -docsRemoved);
                 _increaseDataSize(txn, -sizeSaved);
                 wuow.commit();
+
+                // Update the starting key
+                _cappedFirstRecord = firstRemainingId;
             }
         }
     } catch (const WriteConflictException& wce) {
